[Event Hubs] Remove Legacy Test Infrastructure
The focus of these changes is to remove the legacy test infrastructure which
pre-dated the central test resources system and delegate management of the
test environment and resource bootstrapping to the test framework.

--- a/sdk/eventhub/Azure.Messaging.EventHubs.Processor/src/Azure.Messaging.EventHubs.Processor.csproj
+++ b/sdk/eventhub/Azure.Messaging.EventHubs.Processor/src/Azure.Messaging.EventHubs.Processor.csproj
@@ -15,11 +15,11 @@
   <ItemGroup>
     <PackageReference Include="Azure.Core" />
 
-    <!-- 
-      TEMP: Move Event Hubs to a project reference until the 
+    <!--
+      TEMP: Move Event Hubs to a project reference until the
             changes for processor defaults for the load balancing strategy,
-            load balancing interval, and ownership experation are published.
-    
+            load balancing interval, and ownership expiration are published.
+
     <PackageReference Include="Azure.Messaging.EventHubs" />
     -->
     <ProjectReference Include="$(MSBuildThisFileDirectory)..\..\Azure.Messaging.EventHubs\src\Azure.Messaging.EventHubs.csproj" />
