--- a/sdk/template-dpg/tests.yml
+++ b/sdk/template-dpg/tests.yml
@@ -3,5 +3,5 @@ trigger: none
 extends:
   template: ../../eng/pipelines/templates/stages/archetype-sdk-tests.yml
   parameters:
-    ServiceDirectory: template-dataplanecodegen
+    ServiceDirectory: template-dpg
     SupportedClouds: 'Public'
