--- a/eng/pipelines/templates/steps/install-dotnet.yml
+++ b/eng/pipelines/templates/steps/install-dotnet.yml
@@ -11,16 +11,11 @@ steps:
       includePreviewVersions: true
   - task: UseDotNet@2
     condition: ne(variables['Agent.OS'], 'Windows_NT') # Windows supports MultiLevelLookup and doesn't need explicit framework installation
-    displayName: 'Use .NET Core 3.1 runtime'
+    displayName: 'Use .NET Core 3.1 SDK'
     inputs:
-      packageType: runtime
+      # AspNetCore runtime pack can't be installed outside of SDK and we need it for intergation tests
+      packageType: sdk
       version: "3.1.x"
-  - task: UseDotNet@2
-    condition: ne(variables['Agent.OS'], 'Windows_NT') # Windows supports MultiLevelLookup and doesn't need explicit framework installation
-    displayName: 'Use .NET Core 5.0 runtime'
-    inputs:
-      packageType: runtime
-      version: "5.0.x"
   - task: Cache@2
     inputs:
       key: 'nuget | "$(Agent.OS)" | $(Build.SourcesDirectory)/eng/Packages.Data.props | ${{parameters.NuGetCacheKey}}'
