--- a/sdk/template-dpg/Azure.Template.Generated/tests/Azure.Template.Generated.Tests.csproj
+++ b/sdk/template-dpg/Azure.Template.Generated/tests/Azure.Template.Generated.Tests.csproj
@@ -9,7 +9,7 @@
   <!-- Reference the Client Library -->
   <ItemGroup>
     <ProjectReference Include="$(AzureCoreTestFramework)" />
-    <ProjectReference Include="..\src\Azure.Template.Generation.csproj" />
+    <ProjectReference Include="..\src\Azure.Template.Generated.csproj" />
   </ItemGroup>
 
   <ItemGroup>
