--- a/sdk/core/Azure.Core/tests/Azure.Core.Tests.csproj
+++ b/sdk/core/Azure.Core/tests/Azure.Core.Tests.csproj
@@ -33,6 +33,7 @@
     <Compile Include="..\src\Shared\HttpPipelineMessageHandler.cs" LinkBase="Shared" />
     <Compile Include="..\src\Shared\NoBodyResponseOfT.cs" LinkBase="Shared" />
     <Compile Include="..\src\Shared\ObjectNotDisposedException.cs" LinkBase="Shared" />
+    <Compile Include="..\src\Shared\OperationInternalBase.cs" LinkBase="Shared" />
     <Compile Include="..\src\Shared\OperationInternal.cs" LinkBase="Shared" />
     <Compile Include="..\src\Shared\OperationInternalOfT.cs" LinkBase="Shared" />
     <Compile Include="..\src\Shared\PageResponseEnumerator.cs" LinkBase="Shared" />
