Reapplying Face public preview commits up to v2.8.0-preview.1 (#25466)
* Overwrite Vision.Face with public preview client (#22106)

Replace the client content in Vision.Face with the public preview
client generated from Face/preview/v1.0-preview/Face.json that points
to face/v1.0-preview endpoints.

Co-authored-by: Yang Chen <yachen4@microsoft.com>

* Add release date for 2.8.0 (#22727)

Co-authored-by: Yang Chen <yachen4@microsoft.com>

* Remove inapplicable version number (#22768)

# All SDK Contribution checklist:

This checklist is used to make sure that common guidelines for a pull request are followed.
- [ ] **Please open PR in `Draft` mode if it is:**
	- Work in progress or not intended to be merged.
	- Encountering multiple pipeline failures and working on fixes.
- [ ] If an SDK is being regenerated based on a new swagger spec, a link to the pull request containing these swagger spec changes has been included above.
- [x] **I have read the [contribution guidelines](https://github.com/Azure/azure-sdk-for-net/blob/main/CONTRIBUTING.md).**
- [x] **The pull request does not introduce [breaking changes](https://github.com/dotnet/corefx/blob/master/Documentation/coding-guidelines/breaking-change-rules.md).**

### [General Guidelines and Best Practices](https://github.com/Azure/azure-sdk-for-net/blob/main/CONTRIBUTING.md#general-guidelines)
- [x] Title of the pull request is clear and informative.
- [x] There are a small number of commits, each of which have an informative message. This means that previously merged commits do not appear in the history of the PR. For more information on cleaning up the commits in your PR, [see this page](https://github.com/Azure/azure-powershell/blob/master/documentation/development-docs/cleaning-up-commits.md).

### [Testing Guidelines](https://github.com/Azure/azure-sdk-for-net/blob/main/CONTRIBUTING.md#testing-guidelines)
- [ ] Pull request includes test coverage for the included changes.

### [SDK 

--- a/sdk/cognitiveservices/Vision.Face/src/Microsoft.Azure.CognitiveServices.Vision.Face.csproj
+++ b/sdk/cognitiveservices/Vision.Face/src/Microsoft.Azure.CognitiveServices.Vision.Face.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <AssemblyTitle>Microsoft Cognitive Services Face SDK</AssemblyTitle>
     <Description>This client library provides access to the Microsoft Cognitive Services Face APIs.</Description>
-    <Version>2.7.0-preview.2</Version>
+    <Version>2.8.0-preview.2</Version>
     <PackageTags>Microsoft Cognitive Services;Cognitive Services;Cognitive Services SDK;REST HTTP client;Face;Face API;Face SDK;Vision;netcore451511</PackageTags>
     <PackageReleaseNotes>
     <![CDATA[
@@ -14,6 +14,7 @@
     6) Aligned with latest Face API, multiple recognition model feature was added.
     ]]>
     </PackageReleaseNotes>
+    <GenerateAPIListing>true</GenerateAPIListing>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -23,5 +24,7 @@
   <PropertyGroup>
     <AzureApiTag />
     <PackageTags>$(PackageTags);$(CommonTags);$(AzureApiTag);</PackageTags>
+    <AssemblyName>Microsoft.Azure.CognitiveServices.Vision.Face</AssemblyName>
+    <RootNamespace>Microsoft.Azure.CognitiveServices.Vision.Face</RootNamespace>
   </PropertyGroup>
 </Project>
