--- a/eng/pipelines/templates/steps/install-dotnet.yml
+++ b/eng/pipelines/templates/steps/install-dotnet.yml
@@ -2,18 +2,34 @@ parameters:
   NuGetCacheKey: 'Build'
 
 steps:
-# Installation steps need to be uncommented when switching to a newer SDK that's not available on DevOps agents
-#   - task: UseDotNet@2
-#     displayName: 'Use .NET Core SDK'
-#     inputs:
-#       useGlobalJson: true
-#       performMultiLevelLookup: true
-#   - task: UseDotNet@2
-#     condition: ne(variables['Agent.OS'], 'Windows_NT') # Windows supports MultiLevelLookup and doesn't need explicit framework installation
-#     displayName: 'Use .NET Core 3.1 runtime'
-#     inputs:
-#       packageType: runtime
-#       version: "3.1.x"
+#Installation steps need to be uncommented when switching to a newer SDK that's not available on DevOps agents
+  - task: UseDotNet@2
+    displayName: 'Use .NET Core SDK'
+    inputs:
+      useGlobalJson: true
+      performMultiLevelLookup: true
+      includePreviewVersions: true
+  # Mgmt uses netcoreapp2.0 for testing
+  - task: UseDotNet@2
+    condition: ne(variables['Agent.OS'], 'Windows_NT') # Windows supports MultiLevelLookup and doesn't need explicit framework installation
+    displayName: 'Use .NET Core 3.1 SDK'
+    inputs:
+      packageType: runtime
+      version: "2.0.x"
+  - task: UseDotNet@2
+    condition: ne(variables['Agent.OS'], 'Windows_NT') # Windows supports MultiLevelLookup and doesn't need explicit framework installation
+    displayName: 'Use .NET Core 3.1 SDK'
+    inputs:
+      # AspNetCore runtime pack can't be installed outside of SDK and we need it for intergation tests
+      packageType: sdk
+      version: "3.1.x"
+  # Autorest temporary needs the 5.0 runtime
+  - task: UseDotNet@2
+    condition: ne(variables['Agent.OS'], 'Windows_NT') # Windows supports MultiLevelLookup and doesn't need explicit framework installation
+    displayName: 'Use .NET Core 5.0 runtime'
+    inputs:
+      packageType: runtime
+      version: "5.0.x"
   - task: Cache@2
     inputs:
       key: 'nuget | "$(Agent.OS)" | $(Build.SourcesDirectory)/eng/Packages.Data.props | ${{parameters.NuGetCacheKey}}'
