update record file

--- a/sdk/sqlmanagement/Azure.ResourceManager.Sql/tests/Azure.ResourceManager.Sql.Tests.csproj
+++ b/sdk/sqlmanagement/Azure.ResourceManager.Sql/tests/Azure.ResourceManager.Sql.Tests.csproj
@@ -7,4 +7,8 @@
     <PackageReference Include="Azure.ResourceManager.Network" />
     <PackageReference Include="Microsoft.Azure.AutoRest.CSharp" VersionOverride="$(MgmtAutorestVersion)" PrivateAssets="All" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <Folder Include="SessionRecords\ServerTrustGroupTests\" />
+  </ItemGroup>
 </Project>
