--- a/sdk/edgeorder/Azure.ResourceManager.EdgeOrder/tests/Azure.ResourceManager.EdgeOrder.Tests.csproj
+++ b/sdk/edgeorder/Azure.ResourceManager.EdgeOrder/tests/Azure.ResourceManager.EdgeOrder.Tests.csproj
@@ -1,5 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <UseNewMgmtFramework>false</UseNewMgmtFramework>
+    <IsMgmtSubLibrary>false</IsMgmtSubLibrary>
+  </PropertyGroup>
   <ItemGroup>
+    <ProjectReference Include="$(AzureCoreTestFramework)" />
     <ProjectReference Include="..\src\Azure.ResourceManager.EdgeOrder.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Azure.ResourceManager.Resources" />
+    <PackageReference Include="Microsoft.Azure.AutoRest.CSharp" VersionOverride="$(MgmtAutorestVersion)" PrivateAssets="All" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="SessionRecords\">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Folder>
   </ItemGroup>
 </Project>
