--- a/eng/pipelines/templates/jobs/ci.mgmt.yml
+++ b/eng/pipelines/templates/jobs/ci.mgmt.yml
@@ -2,7 +2,8 @@ jobs:
   - job: Build
     timeoutInMinutes: 100
     pool:
-      vmImage: windows-2019
+      name: azsdk-pool-mms-win-2019-general
+      vmImage: MMS2019
     steps:
       #- script: "echo $(system.pullrequest.pullrequestnumber), https://github.com/$(build.repository.id), https://github.com/$(build.repository.ID)"
       - template: /eng/pipelines/templates/steps/install-dotnet.yml
@@ -44,11 +45,11 @@ jobs:
       maxParallel: $[ variables['MaxParallelTestJobs'] ]
       matrix:
         Linux:
-          Pool: Azure Pipelines
-          OSVmImage: "ubuntu-20.04"
+          Pool: azsdk-pool-mms-ubuntu-2004-general
+          OSVmImage: "MMSUbuntu20.04"
         Windows:
-          Pool: Azure Pipelines
-          OSVmImage: "windows-2019"
+          Pool: azsdk-pool-mms-win-2019-general
+          OSVmImage: MMS2019
         MacOs:
           Pool: Azure Pipelines
           OSVmImage: "macOS-10.15"
@@ -79,7 +80,8 @@ jobs:
     dependsOn:
       - Build
     pool:
-      vmImage: windows-2019
+      name: azsdk-pool-mms-win-2019-general
+      vmImage: MMS2019
     steps:
       - task: UsePythonVersion@0
         displayName: "Use Python 3.6"
