--- a/sdk/subscription/Microsoft.Azure.Management.Subscription/src/Microsoft.Azure.Management.Subscription.csproj
+++ b/sdk/subscription/Microsoft.Azure.Management.Subscription/src/Microsoft.Azure.Management.Subscription.csproj
@@ -13,9 +13,16 @@
             <![CDATA[
                 Breaking changes:
                 * This is the new release of Microsoft.Subscription
-                * SDK structure has been updated to make it more consistent and user-friendly:
-								  1. Put Subscription Alias Api has been added to support subscription creation
-                  2. Post CreateSubscription APIs have been removed as new subscription alias API provides the same functionality.
+                * SDK structure has been updated to make it more consistent and user-friendly:				  
+				  1. Gets all available geo-locations ability is removed.
+				  2. Gets details about a specified subscription ability is removed.
+				  3. Gets all subscriptions for a tenant ability is removed.
+				  4. Post subscription ownership API is added.
+				  5. Get subscription ownership status API is added.
+				  6. Put Subscription tenant policy for user's tenant API is added.
+				  7. Get the subscription tenant policy for the user's tenant API is added.
+				  8. Get all subscription tenant policy for the user's tenant API is added.
+				  9. Get Billing Account Policy API is added.
             ]]>
      </PackageReleaseNotes>
 	</PropertyGroup>
