--- a/sdk/subscription/Microsoft.Azure.Management.Subscription/tests/NetCore/Microsoft.Azure.Management.Subscription.Netcore.Tests.csproj
+++ b/sdk/subscription/Microsoft.Azure.Management.Subscription/tests/NetCore/Microsoft.Azure.Management.Subscription.Netcore.Tests.csproj
@@ -28,4 +28,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ScenarioTests\" />
+  </ItemGroup>
 </Project>
