--- a/sdk/eventhub/Azure.Messaging.EventHubs/src/Azure.Messaging.EventHubs.csproj
+++ b/sdk/eventhub/Azure.Messaging.EventHubs/src/Azure.Messaging.EventHubs.csproj
@@ -14,11 +14,14 @@
   </ItemGroup>
 
   <ItemGroup>
-     <!--    
-        TEMP: Move Core to a project reference until the
-              MessageWithMetadata are shipped in Azure.Core.
-            <PackageReference Include="Azure.Core" />
+     <!--
+        TEMP: Move Core to a project reference until the MessageWithMetadata are shipped in Azure.Core.
+
+    <PackageReference Include="Azure.Core" />
     -->
+    <ProjectReference Include="..\..\..\core\Azure.Core.Experimental\src\Azure.Core.Experimental.csproj" />
+    <!-- END TEMP -->
+
     <PackageReference Include="Azure.Core.Amqp" />
     <PackageReference Include="Microsoft.Azure.Amqp" />
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" />
@@ -62,8 +65,5 @@
       <Link>Resources.resx</Link>
       <CustomToolNamespace>Azure.Messaging.EventHubs</CustomToolNamespace>
     </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\core\Azure.Core.Experimental\src\Azure.Core.Experimental.csproj" />
   </ItemGroup>
 </Project>
