--- a/NuGet.Config
+++ b/NuGet.Config
@@ -10,6 +10,9 @@
       Used for azure-sdk-tools repo until issue https://github.com/Azure/azure-sdk-tools/issues/1329 is addressed
     -->
     <add key="azure-sdk-tools" value="https://azuresdkartifacts.blob.core.windows.net/azure-sdk-tools/index.json" />
+
+    <!-- For draft PR -->
+    <add key="myget" value="https://www.myget.org/F/azure-appservice/api/v3/index.json" />
   </packageSources>
   <disabledPackageSources>
     <clear />
