--- a/sdk/sqlmanagement/Azure.ResourceManager.Sql/tests/Azure.ResourceManager.Sql.Tests.csproj
+++ b/sdk/sqlmanagement/Azure.ResourceManager.Sql/tests/Azure.ResourceManager.Sql.Tests.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
   
   <ItemGroup>
+    <Folder Include="NewFolder\" />
     <Folder Include="SessionRecords\ServerTrustGroupTests\" />
   </ItemGroup>
 </Project>
