--- a/eng/pipelines/templates/steps/install-dotnet.yml
+++ b/eng/pipelines/templates/steps/install-dotnet.yml
@@ -3,8 +3,10 @@ parameters:
 
 steps:
   - task: MSBuild@1
+    displayName: Install DevOps Logger
     inputs:
       solution: eng/InstallDevopsLogger.proj
+      msbuildArguments: /p:WorkFolder="$(Agent.WorkFolder)" /p:BuildDirectory="$(Agent.BuildDirectory)"
 # Installation steps need to be uncommented when switching to a newer SDK that's not available on DevOps agents
 #   - task: UseDotNet@2
 #     displayName: 'Use .NET Core SDK'
@@ -22,9 +24,3 @@ steps:
       key: 'nuget | "$(Agent.OS)" | $(Build.SourcesDirectory)/eng/Packages.Data.props | ${{parameters.NuGetCacheKey}}'
       path: $(NUGET_PACKAGES)
     displayName: Cache NuGet packages
-  - task: PowerShell@2
-    displayName: Install DevOps Logger
-    inputs:
-      pwsh: true
-      workingDirectory: $(Build.SourcesDirectory)
-      filePath: eng/scripts/DownloadDevopsLogger.ps1
