--- a/eng/pipelines/templates/steps/install-dotnet.yml
+++ b/eng/pipelines/templates/steps/install-dotnet.yml
@@ -2,6 +2,11 @@ parameters:
   NuGetCacheKey: 'Build'
 
 steps:
+  - task: MSBuild@1
+    displayName: Install DevOps Logger
+    inputs:
+      solution: eng/InstallDevopsLogger.proj
+      msbuildArguments: /p:WorkFolder="$(Agent.WorkFolder)" /p:BuildDirectory="$(Agent.BuildDirectory)"
 # Installation steps need to be uncommented when switching to a newer SDK that's not available on DevOps agents
 #   - task: UseDotNet@2
 #     displayName: 'Use .NET Core SDK'
