Change IMessageWithContentType to MessageWithMetadata

--- a/sdk/eventhub/Azure.Messaging.EventHubs.Processor/src/Azure.Messaging.EventHubs.Processor.csproj
+++ b/sdk/eventhub/Azure.Messaging.EventHubs.Processor/src/Azure.Messaging.EventHubs.Processor.csproj
@@ -13,7 +13,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <!--    
+        TEMP: Move Core to a project reference until the
+              MessageWithMetadata are shipped in Azure.Core.
     <PackageReference Include="Azure.Core" />
+    -->
 
     <!--
       TEMP: Move Event Hubs to a project reference until the
