--- a/sdk/eventhub/Azure.Messaging.EventHubs/src/Azure.Messaging.EventHubs.csproj
+++ b/sdk/eventhub/Azure.Messaging.EventHubs/src/Azure.Messaging.EventHubs.csproj
@@ -14,7 +14,11 @@
   </ItemGroup>
 
   <ItemGroup>
-<!--    <PackageReference Include="Azure.Core" />-->
+     <!--    
+        TEMP: Move Core to a project reference until the
+              MessageWithMetadata are shipped in Azure.Core.
+            <PackageReference Include="Azure.Core" />
+    -->
     <PackageReference Include="Azure.Core.Amqp" />
     <PackageReference Include="Microsoft.Azure.Amqp" />
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" />
