--- a/sdk/resourcemanager/Azure.ResourceManager/Directory.Build.props
+++ b/sdk/resourcemanager/Azure.ResourceManager/Directory.Build.props
@@ -1,4 +1,7 @@
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <PropertyGroup>
+    <NoDefaultNamespaceAndOutputFolder>true</NoDefaultNamespaceAndOutputFolder>
+  </PropertyGroup>
   <!--
     Add any shared properties you want for the projects under this package directory that need to be set before the auto imported Directory.Build.props
   -->
