move the property to csproj

--- a/sdk/resourcemanager/Azure.ResourceManager/src/Azure.ResourceManager.csproj
+++ b/sdk/resourcemanager/Azure.ResourceManager/src/Azure.ResourceManager.csproj
@@ -9,6 +9,7 @@
     </Description>
     <PackageTags>azure;management;resource</PackageTags>
     <NoWarn>$(NoWarn);CA2214</NoWarn>
+    <NoDefaultNamespaceAndOutputFolder>true</NoDefaultNamespaceAndOutputFolder>
   </PropertyGroup>
 
   <ItemGroup>
