Update the baseline

--- a/eng/pipelines/aggregate-reports.yml
+++ b/eng/pipelines/aggregate-reports.yml
@@ -164,11 +164,11 @@ stages:
               GdnBreakAllTools: false
               GdnBreakGdnToolCredScan: true
               GdnBreakGdnToolCredScanSeverity: Error
-              # GdnBreakBaselineFiles: $(Build.SourcesDirectory)\eng\dotnet.gdnbaselines
-              # GdnBreakBaselines: baseline  
+              GdnBreakBaselineFiles: $(Build.SourcesDirectory)\eng\dotnet.gdnbaselines
+              GdnBreakBaselines: baseline  
               # Used for generating baseline file
-              GdnBreakOutputBaselineFile: dotnet
-              GdnBreakOutputBaseline: baseline
+              # GdnBreakOutputBaselineFile: dotnet
+              # GdnBreakOutputBaseline: baseline
             condition: succeededOrFailed()
             continueOnError: true
 
