smoke test pipeline hook

--- a/eng/pipelines/templates/stages/archetype-net-release.yml
+++ b/eng/pipelines/templates/stages/archetype-net-release.yml
@@ -232,7 +232,7 @@ stages:
                           CloseAfterOpenForTesting: '${{ parameters.TestPipeline }}'
 
           - ${{if and(eq(variables['Build.Reason'], 'Manual'), eq(variables['System.TeamProject'], 'internal'))}}:
-            - template: /eng/pipelines/templates/jobs/smoke.tests.yml
+            - template: /eng/pipelines/templates/jobs/new.smoke.tests.yml
               parameters:
                 Daily: false
                 Artifact: ${{ artifact }}
