update release info

--- a/sdk/webpubsub/ci.yml
+++ b/sdk/webpubsub/ci.yml
@@ -35,4 +35,4 @@ extends:
     - name: Microsoft.Azure.WebPubSub.Common
       safeName: MicrosoftAzureWebPubSubCommon
     - name: Azure.ResourceManager.WebPubSub
-      safeName: Azure.ResourceManager.WebPubSub
+      safeName: AzureResourceManagerWebPubSub
